--- a/samples/sdk-simplepanowidget/src/main/res/layout/main_layout.xml
+++ b/samples/sdk-simplepanowidget/src/main/res/layout/main_layout.xml
@@ -32,13 +32,19 @@
           android:textColor="@color/textDark"
           android:textSize="@dimen/paragragh_text_size"
           android:text="@string/paragraph1" />
-
+®
         <com.google.vr.sdk.widgets.pano.VrPanoramaView
             android:id="@+id/pano_view"
             android:layout_margin="5dip"
             android:layout_width="match_parent"
             android:scrollbars="@null"
+            android:clickable="true"
             android:layout_height="250dip"/>
+        <Button
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="next"
+            android:onClick="changeImage"/>
 
         <TextView
           style="@style/ContentText"
