update,长按的时候切换画面，但是在全屏的时候没有实现

--- a/samples/sdk-simplepanowidget/src/main/res/layout/main_layout.xml
+++ b/samples/sdk-simplepanowidget/src/main/res/layout/main_layout.xml
@@ -33,7 +33,7 @@
           android:textSize="@dimen/paragragh_text_size"
           android:text="@string/paragraph1" />
 ®
-        <com.google.vr.sdk.widgets.pano.VrPanoramaView
+        <com.google.vr.sdk.samples.simplepanowidget.MyVrPanoramaView
             android:id="@+id/pano_view"
             android:layout_margin="5dip"
             android:layout_width="match_parent"
